--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dell",
+  "homepage": "https://Neerajchaudhary05.github.io/My-portfolio-Neeraj/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
